--- a/app/main.css
+++ b/app/main.css
@@ -7,6 +7,23 @@ h4 {
 	color: #295773;
 }
 
+#free-bar {
+	position: fixed;
+	bottom: 100px;
+}
+
+#free-button {
+	padding: 12px;
+	border-radius: 50%;
+	margin-bottom: 0px;
+
+	background-color: #fff;
+	opacity: 0.9;
+	z-index: 999;
+
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+}
+
 .header-bar {
 	background-color: #295773;
 }
