--- a/app/main.css
+++ b/app/main.css
@@ -208,6 +208,13 @@ h4 {
 	z-index: 2;
 }
 
+.react-dat-gui-style {
+	position: absolute;
+	/* top: 10px; */
+	right: 10px;
+	background-color: white;
+}
+
 /* textarea.tall-textarea {
 	height: 80px;
 }
