--- a/app/main.css
+++ b/app/main.css
@@ -208,11 +208,13 @@ h4 {
 	z-index: 2;
 }
 
-.react-dat-gui-style {
+.dat-gui-style {
 	position: absolute;
-	/* top: 10px; */
-	right: 10px;
-	background-color: white;
+	position: absolute;
+	top: 15vh;
+	right: 5vw;
+	width: 20vw;
+	/* background-color: white; */
 }
 
 /* textarea.tall-textarea {
